--- a/package.json
+++ b/package.json
@@ -22,8 +22,14 @@
     "@types/next-auth": "^3.15.0",
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
-    "eslint": "8.16.0",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "eslint": "^7.12.1",
     "eslint-config-next": "12.1.6",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.30.0",
     "typescript": "^4.7.2"
   }
 }
