--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "faunadb": "^4.5.4",
     "next": "12.1.6",
     "next-auth": "^4.3.4",
+    "prismic-dom": "^2.2.7",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@types/next-auth": "^3.15.0",
     "@types/node": "^17.0.35",
+    "@types/prismic-dom": "^2.1.1",
     "@types/react": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "eslint": "^7.12.1",
