--- a/package.json
+++ b/package.json
@@ -23,11 +23,16 @@
     "stripe": "^9.5.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.15.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@types/jest": "^28.1.4",
     "@types/next-auth": "^3.15.0",
     "@types/node": "^17.0.35",
     "@types/prismic-dom": "^2.1.1",
     "@types/react": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "babel-jest": "^28.1.2",
     "eslint": "^7.12.1",
     "eslint-config-next": "12.1.6",
     "eslint-config-standard": "^17.0.0",
@@ -35,6 +40,11 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.30.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^28.1.2",
+    "jest-dom": "^4.0.0",
+    "jest-environment-jsdom": "^28.1.2",
+    "jest-mock": "^28.1.1",
     "typescript": "^4.7.2"
   }
 }
